# MemLibCPP

./: CMakeLists.txt  LICENSE
cmake/: MemLibConfig.cmake.in
code/private/: address.cpp  internal.hpp  memlib.cpp  memory.cpp  module.cpp
code/private/os/: linux.cpp  windows.cpp
code/public/: memlib.hpp
code/public/memlib/: address.hpp  macros.hpp  memory.hpp  module.hpp  os.hpp  re_helper_macros.hpp  types.hpp
scripts/: build_project.bat  build_project.sh  compile_project_debug.bat  compile_project_debug.sh  compile_project_release.bat  compile_project_release.sh  open_project.bat
